# santia-go

./: .env.example  .gitignore  Procfile  RAILWAY_DEPLOYMENT.md  README.md  api.py  ibus-server.py  ibus-worker.js  netlify.toml  package.json  pyproject.toml  railway.toml  red-worker.js  requirements.txt
metro/: __init__.py  cache.py  scraper.py
netlify/functions/: metro-estacion.js  paradero-cached.js  paradero-fallback.js  paradero.js
public/: index.html
public/css/: main.css
public/data/: estaciones_with_lines.geojson  paraderos_santiago.geojson
public/js/: main.js
tools/python/: README.md  api.py  ibus.py  requirements.txt
tools/python/metro/: cli.py  models.py
